hotfix: fix spider overlay z-index

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -25,6 +25,8 @@
   
 
   .footer__column {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -76,6 +78,7 @@
   }
 
   .footer__spider {
+    z-index: 0;
     position: absolute;
     top: 0;
 
